[gd_scene load_steps=12 format=3 uid="uid://dnw7ym2511mq5"]

[ext_resource type="Script" path="res://Chapters/Chapter 1/UI Components/Powerup Information/scenes/plus_info.gd" id="1_petbh"]
[ext_resource type="Texture2D" uid="uid://c5doqtr72enev" path="res://Chapters/Chapter 1/UI Components/Powerup Information/assets/card-back.png" id="1_wqj05"]
[ext_resource type="Texture2D" uid="uid://ccidytpsx6dro" path="res://Chapters/Chapter 1/UI Components/Powerup Information/assets/plus.png" id="2_f4q25"]
[ext_resource type="Texture2D" uid="uid://7k7nady34l25" path="res://Chapters/Chapter 1/UI Components/Powerup Information/assets/star.png" id="3_vrtex"]
[ext_resource type="AudioStream" uid="uid://dpi318o8ricgx" path="res://Chapters/Chapter 1/audios/sounds/crumple-03-40747.mp3" id="5_eubno"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qnxj7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4wb1g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f4q25")
}, {
"duration": 1.0,
"texture": ExtResource("3_vrtex")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_8ip8h"]
resource_name = "Card_flip"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Button/Card_back:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.0957568, 0.166667, 0.242861, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.192376, 0.192376), Vector2(0.160107, 0.192376), Vector2(0.00398939, 0.192376), Vector2(0.171856, 0.192376), Vector2(0.192376, 0.192376)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Button/Card_back/Card:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 1]
}

[sub_resource type="Animation" id="Animation_mkh8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Button/Card_back:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.192376, 0.192376)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Button/Card_back/Card:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}

[sub_resource type="Animation" id="Animation_mkbqu"]
resource_name = "Card_flip_2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Button/Card_back:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.0957568, 0.166667, 0.242861, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.192376, 0.192376), Vector2(0.160107, 0.192376), Vector2(0.00398939, 0.192376), Vector2(0.171856, 0.192376), Vector2(0.192376, 0.192376)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Button/Card_back/Card:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.167921),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 1, -1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vbg8m"]
_data = {
"Card_flip": SubResource("Animation_8ip8h"),
"Card_flip_2": SubResource("Animation_mkbqu"),
"RESET": SubResource("Animation_mkh8f")
}

[node name="Plus-Info" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_petbh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.252028, 0.252028, 0.252028, 1)

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 849.0
offset_top = 200.0
offset_right = 1125.0
offset_bottom = 654.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_qnxj7")

[node name="Card_back" type="Sprite2D" parent="CanvasLayer/Button"]
position = Vector2(136.188, 227)
scale = Vector2(0.192376, 0.192376)
texture = ExtResource("1_wqj05")

[node name="Card" type="AnimatedSprite2D" parent="CanvasLayer/Button/Card_back"]
z_index = -1
sprite_frames = SubResource("SpriteFrames_4wb1g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Button/Card_back"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_vbg8m")
}

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_eubno")

[connection signal="mouse_entered" from="CanvasLayer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
